# bookstore_nhom10

./: .dockerignore  .gitignore  BodyComponent.jsx  BooksManagementComponent.jsx  ButtoninputSearch.jsx  CartComponent.jsx  Dockerfile  FooterComponent.jsx  HeaderComponent.jsx  InputComponent.jsx  NavBarComponent.jsx  Readme.md  TypeProduct.jsx  UserProfileComponent.jsx  build.sh  docker-compose.yml  index.html  package-lock.json  package.json  style.css  styleBody.js  styleCard.js  styleCartComponent.jsx  vite.config.js
backend/: .env  .env.example  .gitignore  Cargo.toml  Readme.md  ]  run
backend/.sqlx/: query-04cdc9d8a8b053a547bc1e37c169b1fcec12eed16d903f4ff2ece0418930239f.json  query-090efe5940e98bd904d6b9f241a7cf1733bbb389b7a7c36fb67839d62dbced81.json  query-0bfb2052327d12d4e86fbc6b2636b74de71c8d9e3de7f2b7c1c6131f74ce2019.json  query-0c2bac8d0b46ba86ce6e19663f74463ef4af63ad45852ea1075a74f7c021eb6b.json  query-147a82d706209f994ae22245c956291b31d5e2d944d148b0fddc83fef157e319.json  query-1a70921e7664989fb8fea3a6651c7c8fb9b64893e9e43ad842d1704e066f9fef.json  query-2491a5ee1de9fca0a757de0d33451245c4afb6bcd6e44bc09ae0d5d87d8d3723.json  query-37c6d496c48f719ea615917f9e19dece45e2ed1dd35e443f10ddfaf764727dc2.json  query-5e9e23b3bb5ff49cc92e39ad85e0d1aab92f5bf8ec736c5fb649c345ee8e553b.json  query-67d0ee3542243947a76a235a25028f6c49c1f6fb9e9a33214d737bb19bec3782.json  query-77fd067f0b3bd66978b56504cef2953e685dcb6a19d77e8ef65befd8e2fcd4e2.json  query-7879aa32bd4ffc9aaf921eb9868fa09cfe28a40d0314ccb77f75e9f3ad4eb51c.json  query-7bf29c3dff9e52e4306bd431bdbb4c49cd3cfaf4c166db74c4c3f2d2ca66494a.json  query-8833d12fb7fcf5dcb2e49aa0d63e3301b68b5faa54c652eae61640b3c9a453bb.json  query-91d937ff28576fb3362ac78920cb2f8f714e6fe39c719d26b5607966a7a3433a.json  query-93ef8bde8f103bfae1cc22b8814d894b07a2d43cb8511a38cc82a136ebcdb632.json  query-a009d0a7cfdddb24494132d83fffd177dd84dd50a211c7c8a5279ab850ea0cb7.json  query-a359fc0dce690168a93504dfe4d277d5cb5dec3dd2a2c4eeae7fc389532e3722.json  query-a710f08944e18c33bd92da6055f7b5035540252e19f4ca7bb5b4177cd885fbde.json  query-af3b70a77034c051fdd28f975a69536b99c99f3437a3c4c1fdba70f99855d45d.json  (+15 more)
(+187 files in other folders)
