[package]
name = "actic_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = {version ="4.4.0"}
dotenv = "0.15.0"
serde = "1.0.188"
sqlx = { version = "0.7.2", features = ["mysql", "macros", "runtime-tokio", "uuid", "json", "time"] }
tokio = { version = "1.33.0" , features = ["macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
watch = "0.2.3"
