[package]
name = "bookstore-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = {version ="4.4.0"}
chrono = "0.4.31"
dotenv = "0.15.0"
futures-util = "0.3.29"
serde = "1.0.188"
sha2 = "0.10.8"
sha256 = "1.4.0"
sqlx = { version = "0.7.2", features = ["mysql", "macros", "runtime-tokio", "uuid", "json", "time"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0" , features = ["macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
