[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["mysql", "macros", "runtime-tokio"] }
dotenv = "0.15.0"
tokio = { version = "1.33.0" , features = ["macros", "rt-multi-thread"] }

